--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
-.html{
-    background-color: blue
+html{
+    background-color: #EFF1F6
 }
+header {height: 50px; background-color:#BCBEC0; font-size: 50px;color:#0099cd; text-align: center}
+section {ba}
