--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,20 @@
 html{
     background-color: #EFF1F6
 }
-header {background-color:#BCBEC0; font-size: 50px;color:#0099cd; text-align: center; padding: 10px 60px}
-li {display: flex; flex-wrap: wrap; flex-direction: column; background-color: azure; border-color: black; border-width: 2px; padding: 10px 60px}
+header {
+    background-color:#BCBEC0;
+     font-size: 50px;
+     color:#0099cd;
+     text-align: center;
+     padding: 10px 60px
+}
+li {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: azure;
+    border-color: black;
+    border-width: 2px;
+    padding: 10px 60px
+}
 p {text-align: right}
