--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,4 @@ html{
     background-color: #EFF1F6
 }
 header {height: 50px; background-color:#BCBEC0; font-size: 50px;color:#0099cd; text-align: center}
-section {ba}
+section {overflow: scroll; height: 120px}
