--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,37 @@
 html{
     background-color: #EFF1F6
 }
+
+section {
+    overflow: scroll
+}
+p {
+    text-align: right
+}
+
+#securities, #client-securities {
+    min-height: 15px;
+}
+body section {
+    max-width: 600px;
+    margin: auto
+}
 header {
     background-color:#BCBEC0;
      font-size: 50px;
      color:#0099cd;
      text-align: center;
-     padding: 10px 60px
+     padding: 10px 60px;
+     max-width: 100%;
 }
 li {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     background-color: azure;
+    border-style: solid;
     border-color: black;
     border-width: 2px;
+    margin: 3px;
     padding: 10px 60px
-}
-p {
-    text-align: right
 }
