--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ header {
      text-align: center;
      padding: 10px 60px;
      max-width: 100%;
+     font-family: "Garamond"
 }
 li {
     background-color: azure;
